--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,8 @@ html {
   scroll-behavior: smooth; }
 
 body {
-  font-family: "cairo", sans-serif; }
+  font-family: "cairo", sans-serif;
+  overflow-x: hidden !important; }
 
 ul, ol {
   padding: 0; }
@@ -242,142 +243,6 @@ a {
     margin: 0 5px 0 0;
     font-size: 15px;
     border-right: 1px #fff solid; }
-
-.bg_img {
-  width: 100%;
-  background-color: #2e2525; }
-
-.like {
-  margin-left: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start; }
-  .like i {
-    color: #fff; }
-
-.info_txt {
-  margin-right: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: right; }
-  .info_txt p {
-    margin: 5px 0;
-    color: #fff;
-    font-size: 22px; }
-
-.Details .title_product {
-  font-size: 25px;
-  text-align: right;
-  margin: 5px 0;
-  border-bottom: 1px solid #000; }
-
-.Details .decribtions {
-  text-align: right;
-  font-size: 22px;
-  color: #c9c9c9; }
-
-.Details .size_product {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
-  .Details .size_product span {
-    border: 1px solid #000;
-    padding: 15px;
-    font-size: 30px;
-    margin: 0 5px;
-    border-radius: 5px;
-    color: #c9c9c9; }
-  .Details .size_product span:nth-child(1) {
-    padding: 0px;
-    border: none;
-    color: #000;
-    font-size: 45px;
-    margin-left: 15px; }
-
-.Details .color_product {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
-  .Details .color_product span {
-    width: 60px;
-    height: 60px;
-    margin: 0 5px;
-    border-radius: 5px; }
-  .Details .color_product span:nth-child(1) {
-    width: auto;
-    margin-left: 40px;
-    height: auto;
-    font-size: 45px; }
-  .Details .color_product span:nth-child(2) {
-    background-color: crimson; }
-  .Details .color_product span:nth-child(3) {
-    background-color: lime; }
-  .Details .color_product span:nth-child(4) {
-    background-color: yellow; }
-  .Details .color_product span:nth-child(5) {
-    background-color: brown; }
-
-.slider_pro .big-img {
-  width: 300px;
-  height: 300px;
-  margin: auto; }
-  .slider_pro .big-img img {
-    width: 100%;
-    height: 100%; }
-
-.slider_pro .smaller {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: auto;
-  width: 80%; }
-  .slider_pro .smaller .mySlider {
-    background-color: gray;
-    border-radius: 15px;
-    padding: 10px;
-    width: 85px;
-    height: 85px; }
-
-.btn_add {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  outline: none;
-  border: none;
-  color: #fff;
-  text-align: center;
-  height: 100px;
-  font-size: 40px;
-  line-height: 100px;
-  margin-top: 10px;
-  cursor: pointer;
-  background-color: #d60b52; }
-  .btn_add:hover {
-    background-color: #b80946; }
 
 .btn {
   background-color: #1ebab1;
