--- a/css/style.css
+++ b/css/style.css
@@ -51,19 +51,31 @@ body {
 .color {
   color: #727272 !important; }
 
+.card-img-top {
+  position: absolute !important;
+  bottom: -60px !important;
+  left: -5px !important; }
+
 #slider {
   width: 90%;
   margin: 10px 5%;
-  height: 300px; }
+  height: 320px; }
+  #slider .card-img-top {
+    position: absolute !important;
+    bottom: -75px !important;
+    left: -5px !important; }
 
 .swiper-container {
   width: 100%;
   height: 100%; }
 
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  bottom: 0 !important; }
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: transparent;
   border-radius: 20px !important;
   display: -webkit-box;
   display: -ms-flexbox;
