--- a/css/style.css
+++ b/css/style.css
@@ -59,36 +59,47 @@ body {
     .card-img-top {
       left: -20px; } }
 
+.swiper-container {
+  width: 100%;
+  height: 100%;
+  background: #000; }
+
 #slider {
-  width: 90%;
-  margin: 10px 5%;
-  height: 320px; }
+  height: 300px !important;
+  width: 95% !important;
+  margin: 10px 2.5% !important; }
   #slider .card-img-top {
     position: absolute !important;
     bottom: -75px !important;
     left: -10px !important; }
 
-.swiper-container {
-  width: 100%;
-  height: 100%; }
-
-.swiper-container-horizontal > .swiper-pagination-bullets {
-  bottom: 0 !important; }
-
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
-  background: transparent;
-  border-radius: 20px !important;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  color: #fff;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 40px 60px; }
+
+.parallax-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 150%;
+  height: 100%;
+  background-size: cover;
+  background-position: center; }
+
+.swiper-slide .title {
+  font-size: 41px;
+  font-weight: 300; }
+
+.swiper-slide .subtitle {
+  font-size: 21px; }
+
+.swiper-slide .text {
+  font-size: 14px;
+  max-width: 400px;
+  line-height: 1.3; }
 
 * {
   -webkit-box-sizing: border-box;
