--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 .swiper-container {
   width: 100%;
   height: 100%;
-  background: #000; }
+  background: transparent; }
 
 #slider {
   height: 300px !important;
