--- a/css/style.css
+++ b/css/style.css
@@ -51,13 +51,17 @@ body {
 .color {
   color: #727272 !important; }
 
-.card-img-top {
+#first_sec .card-img-top {
   position: absolute !important;
   bottom: -10px !important;
   left: 0px !important;
   -webkit-transform: rotate(-10deg);
       -ms-transform: rotate(-10deg);
           transform: rotate(-10deg); }
+  @media (max-width: 992px) {
+    #first_sec .card-img-top {
+      width: 150px !important;
+      height: 100px !important; } }
 
 .swiper-container {
   width: 100%;
