--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,20 @@ body {
 .color {
   color: #727272 !important; }
 
+@media (max-width: 567px) {
+  #first_sec {
+    padding: 0 2rem !important; } }
+
+@media (max-width: 367px) {
+  #first_sec {
+    padding: 0 1rem !important; } }
+
+#first_sec .card {
+  height: 200px !important; }
+  @media (max-width: 567px) {
+    #first_sec .card {
+      height: 225px !important; } }
+
 #first_sec .card-img-top {
   position: absolute !important;
   bottom: -10px !important;
@@ -62,11 +76,10 @@ body {
     #first_sec .card-img-top {
       width: 150px !important;
       height: 100px !important; } }
-
-.swiper-container {
-  width: 100%;
-  height: 100%;
-  background: transparent; }
+  @media (max-width: 400px) {
+    #first_sec .card-img-top {
+      width: 140px !important;
+      height: 90px !important; } }
 
 #slider {
   height: 400px !important;
@@ -78,6 +91,35 @@ body {
     left: 115px !important;
     width: 510px;
     height: 319px; }
+    @media (max-width: 992px) {
+      #slider .card-img-top {
+        bottom: -15px !important;
+        left: 45px !important;
+        width: 450px;
+        height: 300px; } }
+    @media (max-width: 767px) {
+      #slider .card-img-top {
+        bottom: -15px !important;
+        left: 45px !important;
+        width: 350px;
+        height: 260px; } }
+    @media (max-width: 567px) {
+      #slider .card-img-top {
+        bottom: -15px !important;
+        left: 10px !important;
+        width: 245px;
+        height: 200px; } }
+    @media (max-width: 350px) {
+      #slider .card-img-top {
+        bottom: -15px !important;
+        left: 10px !important;
+        width: 190px;
+        height: 180px; } }
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+  background: transparent; }
 
 .swiper-slide {
   font-size: 18px;
@@ -85,6 +127,9 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 40px 60px; }
+  @media (max-width: 420px) {
+    .swiper-slide {
+      padding: 40px 30px; } }
 
 .parallax-bg {
   position: absolute;
