--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,6 @@
   .sp_header .Main_title p {
     color: #fff; }
 
-body {
-  background-color: #efefef !important; }
-
 .color {
   color: #727272 !important; }
 
@@ -186,7 +183,8 @@ html {
 
 body {
   font-family: "cairo", sans-serif;
-  overflow-x: hidden !important; }
+  overflow-x: hidden !important;
+  background-color: #fff !important; }
 
 ul, ol {
   padding: 0; }
@@ -194,302 +192,126 @@ ul, ol {
 a {
   text-decoration: none; }
 
-.btn {
-  background-color: #1ebab1;
-  color: #fff;
+.Details .title_product {
+  margin-top: 9px;
+  font-size: 25px;
   font-weight: 500;
-  font-size: 18;
-  width: 180px;
-  outline: none;
-  border: none;
-  border-radius: 10px;
-  padding: 15px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  .btn:hover {
-    background-color: #189c95; }
-
-.btn_info {
-  background-color: #713c97;
-  color: #fff;
-  font-weight: 500;
-  font-size: 18px;
-  width: 200px;
-  outline: none;
-  border: none;
-  padding: 15px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  @media (max-width: 567px) {
-    .btn_info {
-      margin-top: 25px; } }
-  .btn_info:hover {
-    background-color: #44265a; }
-
-.btn_footer {
-  background-color: #1ebab1;
-  color: #fff;
-  font-weight: 700;
-  font-size: 19;
-  width: 180px;
-  height: 50px;
-  line-height: 25px;
-  text-align: center;
-  outline: none;
-  border: none;
-  padding: 10px;
+  text-align: right;
   margin: 5px 0;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  .btn_footer:hover {
-    background-color: #189c95; }
+  padding-bottom: 5px;
+  border-bottom: 2px solid #000; }
 
-.cart_btn {
-  background-color: #713c97;
-  font-weight: 500;
-  width: 80px;
-  height: 40px;
-  outline: none;
-  border: none;
-  padding: 10px;
-  margin: 0 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  .cart_btn:hover {
-    background-color: #44265a; }
-  .cart_btn a {
-    color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    font-size: 16px; }
-    .cart_btn a .fas {
-      font-size: 12px;
-      margin: auto 0; }
+.Details .decribtions {
+  text-align: right;
+  font-size: 16px;
+  color: #c9c9c9; }
 
-.buy_button {
-  width: 60%;
-  margin: 10px auto;
-  background-color: #713c97;
-  text-align: center;
-  outline: none;
-  border: none;
-  font-size: 20px;
-  height: 50px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
+.Details .size_product,
+.Details .color_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse; }
+  .Details .size_product p,
+  .Details .color_product p {
+    font-size: 20px;
+    margin-left: 10px;
+    font-weight: 600; }
+  .Details .size_product span,
+  .Details .color_product span {
+    border: 1px solid #000;
+    padding: 0 5px;
+    height: 30px;
+    width: 35px;
+    line-height: 30px;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 0 5px;
+    border-radius: 5px;
+    color: #c9c9c9; }
+
+.Details .color_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse; }
+  .Details .color_product p {
+    margin-left: 30px; }
+  .Details .color_product span {
+    width: 35px;
+    border: none;
+    border-radius: 10px; }
+  .Details .color_product span:nth-child(1) {
+    background-color: yellow; }
+  .Details .color_product span:nth-child(2) {
+    background-color: crimson; }
+  .Details .color_product span:nth-child(3) {
+    background-color: lime; }
+  .Details .color_product span:nth-child(4) {
+    background-color: brown; }
+  .Details .color_product span:nth-child(5) {
+    background-color: purple; }
+
+.Details .btn_buy {
+  border-radius: 5px;
+  background-color: #d60b52;
   color: #fff;
-  line-height: 50px; }
-  .buy_button:hover {
-    background-color: #44265a; }
+  font-size: 20px; }
+  .Details .btn_buy:hover {
+    background-color: #b00742; }
 
-.btn_copon {
-  width: 25%;
-  margin: 0 10px 0 0;
-  background-color: #79c443;
-  text-align: center;
-  outline: none;
-  border: none;
-  font-size: 20px;
-  height: 40px;
-  padding: 5px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  color: #fff; }
-  .btn_copon:hover {
-    background-color: #67a739; }
-  .btn_copon a {
-    color: #fff; }
+.slider_pro .big-img {
+  width: 300px;
+  height: 300px;
+  margin: auto; }
+  .slider_pro .big-img img {
+    width: 100%;
+    height: 100%; }
 
-.btn_Dach {
-  float: left;
-  width: 135px;
-  margin: 0 10px 0 0;
-  background-color: crimson;
-  text-align: center;
-  outline: none;
-  border: none;
-  font-size: 18px;
-  height: 35px;
-  padding: 5px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  color: #fff; }
-  .btn_Dach:hover {
-    background-color: #ab0a28; }
-  .btn_Dach i {
-    padding: 5px 8px 5px 0;
-    margin: 0 5px 0 0;
-    font-size: 15px;
-    border-right: 1px #fff solid; }
+.slider_pro .smaller {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  width: 100%; }
+  @media (max-width: 992px) {
+    .slider_pro .smaller {
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
+  .slider_pro .smaller .mySlider {
+    background-color: #edeef0;
+    border-radius: 15px;
+    cursor: pointer;
+    width: 85px;
+    height: 85px;
+    margin: 10px; }
 
-.btn {
-  background-color: #1ebab1;
-  color: #fff;
-  font-weight: 500;
-  font-size: 18;
-  width: 180px;
-  outline: none;
-  border: none;
-  border-radius: 10px;
-  padding: 15px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  .btn:hover {
-    background-color: #189c95; }
-
-.btn_info {
-  background-color: #713c97;
-  color: #fff;
-  font-weight: 500;
-  font-size: 18px;
-  width: 200px;
-  outline: none;
-  border: none;
-  padding: 15px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
+.big-img {
+  width: 300px;
+  height: 300px;
+  margin: auto; }
+  .big-img img {
+    width: 100%;
+    height: 100%; }
+  @media (max-width: 992px) {
+    .big-img {
+      margin-bottom: 20px; } }
   @media (max-width: 567px) {
-    .btn_info {
-      margin-top: 25px; } }
-  .btn_info:hover {
-    background-color: #44265a; }
-
-.btn_footer {
-  background-color: #1ebab1;
-  color: #fff;
-  font-weight: 700;
-  font-size: 19;
-  width: 180px;
-  height: 50px;
-  line-height: 25px;
-  text-align: center;
-  outline: none;
-  border: none;
-  padding: 10px;
-  margin: 5px 0;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  .btn_footer:hover {
-    background-color: #189c95; }
-
-.cart_btn {
-  background-color: #713c97;
-  font-weight: 500;
-  width: 80px;
-  height: 40px;
-  outline: none;
-  border: none;
-  padding: 10px;
-  margin: 0 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s; }
-  .cart_btn:hover {
-    background-color: #44265a; }
-  .cart_btn a {
-    color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    font-size: 16px; }
-    .cart_btn a .fas {
-      font-size: 12px;
-      margin: auto 0; }
-
-.buy_button {
-  width: 60%;
-  margin: 10px auto;
-  background-color: #713c97;
-  text-align: center;
-  outline: none;
-  border: none;
-  font-size: 20px;
-  height: 50px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  color: #fff;
-  line-height: 50px; }
-  .buy_button:hover {
-    background-color: #44265a; }
-
-.btn_copon {
-  width: 25%;
-  margin: 0 10px 0 0;
-  background-color: #79c443;
-  text-align: center;
-  outline: none;
-  border: none;
-  font-size: 20px;
-  height: 40px;
-  padding: 5px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  color: #fff; }
-  .btn_copon:hover {
-    background-color: #67a739; }
-  .btn_copon a {
-    color: #fff; }
-
-.btn_Dach {
-  float: left;
-  width: 135px;
-  margin: 0 10px 0 0;
-  background-color: crimson;
-  text-align: center;
-  outline: none;
-  border: none;
-  font-size: 18px;
-  height: 35px;
-  padding: 5px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  color: #fff; }
-  .btn_Dach:hover {
-    background-color: #ab0a28; }
-  .btn_Dach i {
-    padding: 5px 8px 5px 0;
-    margin: 0 5px 0 0;
-    font-size: 15px;
-    border-right: 1px #fff solid; }
+    .big-img {
+      width: 90%;
+      margin: 0 5%; } }
