--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,10 @@ a {
 .big-img {
   width: 300px;
   height: 300px;
-  margin: auto; }
+  margin: auto;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
   .big-img img {
     width: 100%;
     height: 100%; }
