--- a/css/style.css
+++ b/css/style.css
@@ -459,3 +459,151 @@ a {
     .big-img {
       width: 90%;
       margin: 0 5%; } }
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 20px; }
+  .header .Main_title p {
+    font-size: 55px;
+    color: #807f7f;
+    font-weight: 900;
+    text-align: right; }
+  .header .transfer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+    .header .transfer .btn_tran,
+    .header .transfer .a_tran {
+      cursor: pointer;
+      font-size: 35px;
+      color: #c9c9c9;
+      margin: 0 7px; }
+    .header .transfer .btn_tran {
+      background-color: transparent;
+      outline: none;
+      border: none;
+      height: -webkit-fit-content;
+      height: -moz-fit-content;
+      height: fit-content; }
+
+.sp_header {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 0; }
+  .sp_header .Main_title p {
+    color: #fff; }
+
+.logo-top-img {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 100px;
+  left: 155px; }
+
+.mt-sec {
+  margin-top: 10rem !important; }
+
+.vertical-txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  -webkit-text-orientation: mixed;
+          text-orientation: mixed;
+  color: #b89467; }
+
+.sec-tit {
+  color: #bd4b1f;
+  text-align: center; }
+
+.sec3-color {
+  color: #42a4a3; }
+
+.font-size-20 {
+  font-size: 20px;
+  font-weight: 700; }
+
+.sec4-color {
+  color: #d6a25a;
+  border: #d6a25a 2px solid; }
+
+.sec2-img {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 20px;
+  right: 40px; }
+
+.up-border {
+  width: 475px;
+  height: 200px;
+  position: absolute;
+  top: -15px;
+  left: 30px;
+  background-color: transparent;
+  border: #b89467 2px solid; }
+
+.up-borser-sec3 {
+  width: 275px;
+  height: 325px;
+  position: absolute;
+  top: -25px;
+  left: -25px;
+  background-color: transparent;
+  border: #b89467 2px solid; }
+
+.img-4 {
+  position: absolute;
+  bottom: -30px;
+  left: 10px; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0; }
+
+html {
+  scroll-behavior: smooth; }
+
+body {
+  font-family: "cairo", sans-serif;
+  overflow-x: hidden !important;
+  background-color: #f8f8f8 !important; }
+
+.rlt {
+  direction: rtl !important; }
+
+.llt {
+  direction: ltr !important; }
+
+.float-right {
+  float: right !important; }
+
+.bg-white {
+  background-color: #fff !important; }
+
+ul, ol {
+  padding: 0; }
+
+a {
+  text-decoration: none; }
